# PolygonCenterLine_clamping

./: .gitignore  CMakeLists.txt  README.md
data/: Drawing1.dwg2316ea31-98ba-4583-9fff-99529533701d.Info.geojson  Example探测区域.dwg23350338-282d-471b-8fc8-3eaae4706322.Info.geojson  FL233ON2_S20-平面-xk(1).Info(1).geojson  FL233ON2_S20-平面-xk(1).Info.geojson  UCS区域.geojson  弧线区域.geojson  房间分割.Info.geojson  走道中心线_TO浙大.dwgc3bd6a08-e145-41f2-815d-2efb9e0423e1.Info.geojson  走道中心线_TO浙大.dwgcbe4788c-d27a-49b1-8d41-f5ba3356d334.Info.geojson
data/宝山顾村地下车库-建筑结构平面图/: 宝山顾村地下车库-建筑结构平面图.dwg001.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg002.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg003.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg004.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg005.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg006.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg007.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg008.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg009.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg010.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg011.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg012.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg013.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg014.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg015.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg016.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg017.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg018.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg019.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg020.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg021.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg022.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg023.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg024.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg025.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg026.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg027.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg028.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg029.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg030.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg031.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg032.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg033.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg034.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg035.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg036.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg037.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg038.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg039.Info.geojson  宝山顾村地下车库-建筑结构平面图.dwg040.Info.geojson  (+172 more)
docs/: PolygonCenterLine.md  PolygonCenterLine_clamping.md
include/: CGALDef.h  CenterLineContext.h  CenterLineGeoJSON.h  CenterLineSolver.h  CenterLineViewer.h  GeoJSON.h  PartitionSolver.h  PolygonCenterLine.h  UcsPartitionSolver.h  calculate_partition.h  convertKernel.h  generate_centerline  generate_centerline.h  getCenterLine.h  parse.h  stdafx.h  valdata.h
include/impl/: EdgeData.h  Event.h  Interval.h  PointData.h  append_collision_events.h  append_line_data.h  calc_interval_on_line.h  connect_segments.h  cut_half_edge.h  cut_half_point.h  process_event.h
src/: CenterLineGeoJSON.cpp  PolygonCenterLine.cpp
test/: PartitionViewer.h  PolygonCenterLineTest.cpp  PolygonCenterLineTest.h
